--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.ck-editor__editable {
+  min-height: 200px;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
